rename buttons/add button for garden

--- a/popup.html
+++ b/popup.html
@@ -8,14 +8,16 @@
 <body>
   <div class="container">
     <div id="navContainer">
-      <div class="disco button buttonActive">disco fetish</div>
-      <div class="main button">ifm main</div>
-      <div class="dream button">the dream machine</div>
+      <div class="disco button buttonActive">classix</div>
+      <div class="main button">main</div>
+      <div class="dream button">dream</div>
+      <div class="garden button">garden</div>
     </div>
     <div id="trackContainer">
       <div id="disco" class="active"></div>
       <div id="main"></div>
       <div id="dream"></div>
+      <div id="garden"></div>
     </div>
   </div>
 </body>
