reorder main and disco buttons

--- a/popup.html
+++ b/popup.html
@@ -8,14 +8,14 @@
 <body>
   <div class="container">
     <div id="navContainer">
-      <div class="disco button buttonActive">classix</div>
-      <div class="main button">main</div>
+      <div class="main button buttonActive">main</div>
+      <div class="disco button">classix</div>
       <div class="dream button">dream</div>
       <div class="garden button">garden</div>
     </div>
     <div id="trackContainer">
-      <div id="disco" class="active"></div>
-      <div id="main"></div>
+      <div id="main" class="active"></div>
+      <div id="disco"></div>
       <div id="dream"></div>
       <div id="garden"></div>
     </div>
